k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: codegalaxy-ns
  labels:
    name: codegalaxy-ns
