k8s/ws2-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: ws2-deployment
  namespace: codegalaxy-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-ws2
  template:
    metadata:
      labels: 
        app: code-ws2
    spec:
      containers:
      - name: code-ws2
        image: gehlotnikhil38/code_ws2:v3 
        ports:
        - containerPort: 8081
        resources: 
          requests: 
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
