k8s/ws2-service.yml
kind: Service
apiVersion: v1
metadata:
  name: code-ws2
  namespace: codegalaxy-ns
spec:
  selector:
    app: code-ws2
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30082
  type: NodePort
