k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codegalaxy-ingress
  namespace: codegalaxy-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/websocket-services: "code-ws2"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          # Backend API
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: code-backend
                port:
                  number: 8000

          # Frontend
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: code-frontend
                port:
                  number: 80

          # WebSocket
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: code-ws2
                port:
                  number: 8081
